<resources>
    <string name="app_name">TipCalculator</string>
    <string name="check_amount">Check amount:</string>
    <string name="party_size">Party size:</string>
    <string name="buttonCompute">Compute Tip</string>
    <string name="heading">Tips and total (per person)</string>
    <string name="tipLabel">Tip: </string>
    <string name="totalLabel">Total: </string>
    <string name="tipLabel15">15%</string>
    <string name="tipLabel20">20%</string>
    <string name="tipLabel25">25%</string>
</resources>